Dark mode relaxed list content colour fix

--- a/custom/templates/DefaultRevamp/css/custom.css
+++ b/custom/templates/DefaultRevamp/css/custom.css
@@ -1112,7 +1112,8 @@ body.dark .ui.attached.tabular.menu .item,
 body.dark .ui.comments .comment .metadata,
 body.dark .ui.comments .comment .actions a,
 body.dark .ui.card>.extra a:not(.ui),
-body.dark .ui.cards>.card>.extra a:not(.ui){
+body.dark .ui.cards>.card>.extra a:not(.ui),
+body.dark .ui.relaxed.list .item .content {
 	color: rgba(255, 255, 255, 0.6);
 }
 
